# CalcGTest

./: CMakeLists.txt  DivisionByZeroTest.h  IHistoryMock.h  LoggingTest.h  main.cpp
